# cmake_course

./: Dockerfile  README.md  index.html  robots.txt  sitemap.xml
.github/workflows/: deploy.yml
01_intro/: CMakeLists.txt
01_intro/01_utility_example/: CMakeLists.txt
01_intro/02_basic_example/: CMakeLists.txt  Calculator.cpp  Calculator.h  Main.cpp
02_arguments/: brackets.cmake  quoted.cmake  unquoted.cmake
03_scope/: scope.cmake
04_lists/: create_list.cmake  manipulate_list.cmake
05_conditions/: 01_condition_defined_variable.cmake  02_condition_comparison.cmake  03_checks.cmake
05_conditions/cached_variable/: CMakeLists.txt
06_loops/: 01_simple_loops.cmake  02_other_foreach_forms.cmake  03_zip_lists.cmake
07_macros_and_functions/: function.cmake  macro.cmake
08_frequent_commands/: 01_message_context.cmake  02_message_indent.cmake  03_execute_process.cmake  04_file_operations.cmake
09_project_partitioning/01_PaceMaker_include/: CMakeLists.txt  Main.cpp
09_project_partitioning/01_PaceMaker_include/Control/: Control.h  control.cmake
09_project_partitioning/01_PaceMaker_include/Data/: Data.cpp  Data.h  data.cmake
09_project_partitioning/02_PaceMaker_subdirectories/: CMakeLists.txt  Main.cpp
09_project_partitioning/02_PaceMaker_subdirectories/Control/: CMakeLists.txt  Control.cpp
09_project_partitioning/02_PaceMaker_subdirectories/Data/: CMakeLists.txt
10_scoping_environment/: CMakeLists.txt
10_sysinfo/: sysinfo.cmake
11_try_compile_run/: CMakeLists.txt  Main.cpp
12_toolchains/: CMakeLists.txt  Main.cpp  arm_toolchain.cmake  x86_toolchain.cmake
13_excercise_01/src/: CMakeLists.txt
13_excercise_01/src/app/: CMakeLists.txt
13_excercise_01/src/engine/: Engine.cpp  Engine.h  Producer.h  Queue.cpp  Task.h
13_excercise_01/src/protocol/: LogMessage.h
14_dependency_graph/: App.cpp  CMakeGraphVizOptions.cmake  CMakeLists.txt  Core.cpp  Core.h  Decorator.cpp  Decorator.h
15_target_sources/: CMakeLists.txt  Main.cpp  ReadFile.h  ReadFile_Linux.cpp  ReadFile_Windows.cpp
16_configure_file/: CMakeLists.txt  Definitions.h.in  Main.cpp
17_precompiled_headers/: CMakeLists.txt  Main.cpp
18_debugging_the_build/: CMakeLists.txt
18_headers_inclusion/: Main.cpp
19_odr/01_single_exec/: CMakeLists.txt  Functions.cpp  Main.cpp  Shared.h
19_odr/02_shared_lib/: Bar.cpp  CMakeLists.txt  Foo.cpp  Main.cpp
20_unresolved_symbols/: A.cpp  B.cpp  CMakeLists.txt  Main.cpp
21_exercise_02/: CMakeLists.txt
21_exercise_02/advancedmath/: AdvancedMath.h  CMakeLists.txt
21_exercise_02/app/: App.cpp
21_exercise_02/basicmath/: CMakeLists.txt
22_find_package/: CMakeLists.txt
23_writing_find_module/: CMakeLists.txt  Main.cpp
23_writing_find_module/cmake/module/: FindPQXX.cmake
24_fetch_content/01_fetch_only/: CMakeLists.txt
24_fetch_content/02_fetch_if_not_present/: CMakeLists.txt  Main.cpp
24_fetch_content/03_external_project/: CMakeLists.txt  ExternalProjectCMakeLists.txt.in
25_cmake_and_conan/: CMakeLists.txt
25_cmake_and_conan/01_simple_project/: CMakeLists.txt
25_cmake_and_conan/02_conan_cmake_integration/: CMakeLists.txt  CMakeUserPresets.json  example.json
26_test_handling_failures/: CMakeLists.txt  Main.cpp
27_basic_unit_test/: CMakeLists.txt
27_basic_unit_test/01_very_basic_example/: CMakeLists.txt
27_basic_unit_test/01_very_basic_example/src/: Calculator.h
27_basic_unit_test/01_very_basic_example/test/: CMakeLists.txt  Tester.cpp
27_basic_unit_test/src/: BaseMessage.h
27_basic_unit_test/test/: CMakeLists.txt  Tests.cpp
28_test_frameworks/: CMakeLists.txt
28_test_frameworks/01_basic_example_googletest/: CMakeLists.txt
28_test_frameworks/01_basic_example_googletest/src/: CMakeLists.txt  Calculator.cpp
28_test_frameworks/01_basic_example_googletest/test/: CMakeLists.txt  Tester.cpp
28_test_frameworks/test/: CMakeLists.txt  catch2test.cpp  googletest.cpp  noframework.cpp
29_coverage/: CMakeLists.txt
29_coverage/cmake/: Coverage.cmake
29_coverage/src/: LogMessage.h
29_coverage/test/: CMakeLists.txt
30_code_formatting/: CMakeLists.txt  Main.cpp
30_code_formatting/cmake/: Format.cmake
31_static_analysis/: CMakeLists.txt
31_static_analysis/01_built_in/: CMakeLists.txt  Main.cpp
31_static_analysis/02_external_module/: CMakeLists.txt
32_export_without_installation/executable/: CMakeLists.txt  MainShared.cpp
33_install/exe_build/: CMakeCache.txt  Makefile  cmake_install.cmake  main_static
33_install/executable/: CMakeLists.txt  MainStatic.cpp
35_reusable_packages/01_library_without_generators/: CMakeLists.txt
35_reusable_packages/02_library_with_generators/: CMakeLists.txt
35_reusable_packages/03_install_target_export_files/executable/: CMakeLists.txt
35_reusable_packages/04_install_version_files/: CMakeLists.txt
36_cpack/: CMakeLists.txt  StaticLibConfig.cmake  static_library.cpp
37_presets/01_config_preset/: CMakePresets.json
37_presets/02_build_preset/: CMakeLists.txt  CMakePresets.json
37_presets/03_install/: CMakeLists.txt  CMakePresets.json
37_presets/04_workflow/: CMakePresets.json
38_documentation/01_simple_docs/: CMakeLists.txt
38_documentation/02_decorations/: BasicMath.cpp  BasicMath.h
docs/: config.toml
docs/content/: _index.md
docs/templates/: index.html
exercises/day_02_exercise_02/: CMakeLists.txt
exercises/exercise_03/solution/advancedmath/: AdvancedMath.cpp  CMakeLists.txt
exercises/exercise_03/solution/app/: CMakeLists.txt
exercises/exercise_04/advanced_solution/: CMakeLists.txt  CMakePresets.json
exercises/exercise_04/advanced_solution/advancedmath/: AdvancedMath.cpp
exercises/exercise_04/advanced_solution/app/: App.cpp
exercises/exercise_04/advanced_solution/basicmath/: BasicMath.cpp  BasicMath.h
exercises/exercise_04/advanced_solution/tests/: Tests.cpp
exercises/exercise_conan/solution/: CMakeLists.txt  FileListener.h  conanfile.txt
exercises/exercise_cpack/: CMakeLists.txt
exercises/exercise_cppcheck/: CMakeLists.txt  Main.cpp
exercises/exercise_fetch/solution/: CMakeLists.txt
(+143 files in other folders)
